--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,8 +25,10 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
-
+    compileSdkVersion 34
+    if (project.android.hasProperty("namespace")) {
+        namespace "com.homex.open_mail_app"
+    }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
